# ocr_mcp

./: .npmignore  LICENSE  README.md  mcp-config.json  package-lock.json  package.json  pyproject.toml  requirements.txt  standalone_ocr.py  test_core_functionality.py  validate_system.py  verify_mcp_installation.py
.trae/documents/: MCP_集成指南.md  OCR_MCP_产品需求文档.md  OCR_MCP_技术架构文档.md  product_requirements.md  technical_architecture.md
examples/: basic_usage.py  claude_integration.py
lib/: index.js
ocr_mcp/: __init__.py  __main__.py  server.py  standalone_server.py
ocr_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ocr_mcp/tools/: __init__.py  base_tool.py  captcha_tool.py  preprocess_tool.py
ocr_mcp/utils/: __init__.py  image_utils.py  logger.py
python/: config.yaml  requirements.txt  server.py
scripts/: postinstall.js  publish.js
tests/: __init__.py  conftest.py  test_captcha_tool.py  test_image_utils.py  test_preprocess_tool.py
